xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__absent_context_in_function.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_xpath(\"function() { . }\")"
---
Err(
    SpannedError {
        error: XPDY0002,
        span: SourceSpan(
            13,
            14,
        ),
    },
)
