xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__add.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_expr_single(\"1 + 2\")"
---
Ok(
    Spanned {
        value: Binary(
            Binary {
                left: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: 0..1,
                },
                op: Add,
                right: Spanned {
                    value: Const(
                        Integer(
                            2,
                        ),
                    ),
                    span: 4..5,
                },
            },
        ),
        span: 0..5,
    },
)
