xee-xpath-outer/src/ir/snapshots/xee_xpath_outer__ir__ast_ir__tests__cast_non_simple_schema_type.snap
---
source: xee-xpath-outer/src/ir/ast_ir.rs
expression: "convert_expr_single(\"1 cast as xs:untyped\")"
---
Err(
    SpannedError {
        error: XQST0052,
        span: SourceSpan(
            0,
            20,
        ),
    },
)
